--- a/ALFC connect PCL/ALFCConnect.csproj
+++ b/ALFC connect PCL/ALFCConnect.csproj
@@ -36,17 +36,44 @@
     <Compile Include="App.cs" />
     <Compile Include="Common\AppColors.cs" />
     <Compile Include="Common\Constants.cs" />
+    <Compile Include="Common\ExtendedButton.cs" />
     <Compile Include="Common\Settings.cs" />
+    <Compile Include="Data\BibleDataInfo.cs" />
+    <Compile Include="Data\BibleVersions.cs" />
+    <Compile Include="Data\DataConnection.cs" />
     <Compile Include="Data\DataStoreHelper.cs" />
     <Compile Include="Data\EventsData.cs" />
-    <Compile Include="Helpers\RssHelper.cs" />
+    <Compile Include="Data\SermonsData.cs" />
+    <Compile Include="Data\SlidesData.cs" />
+    <Compile Include="Helpers\BoolColorConvertor.cs" />
+    <Compile Include="Helpers\CrossPushNotificationListner.cs" />
+    <Compile Include="Helpers\HtmlParser.cs" />
+    <Compile Include="Helpers\PinchToZoomContainer.cs" />
     <Compile Include="Helpers\Settings.cs" />
-    <Compile Include="Interfaces\IRssFeed.cs" />
-    <Compile Include="Interfaces\IRssHelper.cs" />
-    <Compile Include="Models\EventsDataModel.cs" />
-    <Compile Include="Models\RssPost.cs" />
+    <Compile Include="Interfaces\IDataInfo.cs" />
+    <Compile Include="Interfaces\IDataListItem.cs" />
+    <Compile Include="ISQLite.cs" />
+    <Compile Include="Models\Bible.cs" />
+    <Compile Include="Models\Book.cs" />
+    <Compile Include="Models\BookListView.cs" />
+    <Compile Include="Models\EventSlide.cs" />
+    <Compile Include="Models\FeatureEvent.cs" />
     <Compile Include="Models\RssSlide.cs" />
+    <Compile Include="Models\Sermon.cs" />
+    <Compile Include="Models\SermonSlide.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\BaseListItemTemplate.cs" />
+    <Compile Include="ViewModels\BasePageViewModel.cs" />
+    <Compile Include="ViewModels\BibleListView.cs" />
+    <Compile Include="ViewModels\EventsViewModel.cs" />
+    <Compile Include="ViewModels\EventsDataTemplateSelector.cs" />
+    <Compile Include="ViewModels\SermonDataTemplateSelector.cs" />
+    <Compile Include="ViewModels\SermonSlidesViewModel.cs" />
+    <Compile Include="ViewModels\SermonsViewModel.cs" />
+    <Compile Include="ViewModels\SettingsViewModel.cs" />
+    <Compile Include="Views\DropdownListPage.xaml.cs">
+      <DependentUpon>DropdownListPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
@@ -59,18 +86,22 @@
     <Compile Include="Views\EventsPage.xaml.cs">
       <DependentUpon>EventsPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\SermonSlidePage.xaml.cs">
+      <DependentUpon>SermonSlidePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\SermonsPage.xaml.cs">
       <DependentUpon>SermonsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ReminderPage.xaml.cs">
       <DependentUpon>ReminderPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\EventsPageCS.cs" />
-    <Compile Include="Views\MainPageCS.cs" />
-    <Compile Include="Views\MasterPageCS.cs" />
-    <Compile Include="Views\ReminderPageCS.cs" />
-    <Compile Include="Views\SermonsPageCS.cs" />
     <Compile Include="Models\MasterPageItem.cs" />
+    <Compile Include="Views\SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SharePage.xaml.cs">
+      <DependentUpon>SharePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\WebPage.xaml.cs">
       <DependentUpon>WebPage.xaml</DependentUpon>
     </Compile>
@@ -96,8 +127,20 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="MVVM.Toolbox, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Xamarin-MVVM.1.0.3\lib\MVVM.Toolbox.dll</HintPath>
+    <Reference Include="GalaSoft.MvvmLight, Version=5.2.0.37222, Culture=neutral, PublicKeyToken=e7570ab207bcb616, processorArchitecture=MSIL">
+      <HintPath>..\packages\MvvmLightLibs.5.2.0.0\lib\portable-net45+wp8+wpa81+netcore45+monoandroid1+xamarin.ios10\GalaSoft.MvvmLight.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="GalaSoft.MvvmLight.Extras, Version=5.2.0.37222, Culture=neutral, PublicKeyToken=669f0b5e8f868abf, processorArchitecture=MSIL">
+      <HintPath>..\packages\MvvmLightLibs.5.2.0.0\lib\portable-net45+wp8+wpa81+netcore45+monoandroid1+xamarin.ios10\GalaSoft.MvvmLight.Extras.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="HtmlAgilityPack-PCL, Version=1.4.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack-PCL.1.4.6\lib\HtmlAgilityPack-PCL.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json">
@@ -135,12 +178,12 @@
       <HintPath>..\packages\Xam.Plugin.PushNotification.1.1.7\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\PushNotification.Plugin.Abstractions.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="SQLite.Net, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SQLite.Net-PCL.3.1.1\lib\portable-win8+net45+wp8+wpa81+MonoAndroid1+MonoTouch1\SQLite.Net.dll</HintPath>
+    <Reference Include="Splat, Version=1.6.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Splat.1.6.2\lib\Portable-net45+win+wpa81+wp80\Splat.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="SQLite.Net.Async, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SQLite.Net.Async-PCL.3.1.1\lib\portable-win8+net45+wp8+wpa81+MonoAndroid1+MonoTouch1\SQLite.Net.Async.dll</HintPath>
+    <Reference Include="SQLite.Net, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SQLite.Net-PCL.3.1.1\lib\portable-win8+net45+wp8+wpa81+MonoAndroid1+MonoTouch1\SQLite.Net.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http">
@@ -151,6 +194,9 @@
     </Reference>
     <Reference Include="System.Net.Http.Primitives">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.Primitives.dll</HintPath>
+    </Reference>
+    <Reference Include="Windows">
+      <HintPath>..\..\..\..\Program Files (x86)\Windows Phone Kits\8.1\References\CommonConfiguration\Neutral\Windows.winmd</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Xamarin.Forms.2.1.0.6529\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
@@ -170,7 +216,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ViewModels\" />
+    <EmbeddedResource Include="Views\DropdownListPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\WebPage.xaml">
@@ -186,6 +235,24 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Helpers\CrossPushNotificationListener.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\SettingsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\SermonSlidePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\SharePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
