--- a/WinPhone81/packages.config
+++ b/WinPhone81/packages.config
@@ -1,15 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="wpa81" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="wpa81" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="wpa81" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="wpa81" />
+  <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="wpa81" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="wpa81" />
-  <package id="SQLite.Net.Async-PCL" version="3.1.1" targetFramework="wpa81" />
+  <package id="Splat" version="1.6.2" targetFramework="wpa81" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="wpa81" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="wpa81" />
   <package id="Xam.Plugin.Connectivity" version="2.1.2" targetFramework="wpa81" />
   <package id="Xam.Plugin.DeviceInfo" version="2.0.2" targetFramework="wpa81" />
   <package id="Xam.Plugins.Settings" version="2.1.0" targetFramework="wpa81" />
+  <package id="Xamarin.Facebook" version="4.4.0.2" targetFramework="wpa81" />
   <package id="Xamarin.Forms" version="2.1.0.6529" targetFramework="wpa81" />
-  <package id="Xamarin-MVVM" version="1.0.3" targetFramework="wpa81" />
 </packages>
