--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,20 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="xamarinios10" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="xamarinios10" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="xamarinios10" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="xamarinios10" />
+  <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="xamarinios10" />
-  <package id="SQLite.Net.Async-PCL" version="3.1.1" targetFramework="xamarinios10" />
+  <package id="Splat" version="1.6.2" targetFramework="xamarinios10" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="xamarinios10" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="xamarinios10" />
-  <package id="sqlite-net" version="1.0.8" targetFramework="xamarinios10" />
-  <package id="sqlite-net-pcl" version="1.0.11" targetFramework="xamarinios10" />
-  <package id="SQLitePCL.raw_basic" version="0.7.1" targetFramework="xamarinios10" />
-  <package id="SQLiteReposotry.WinRT" version="1.0.0.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Connectivity" version="2.1.2" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.DeviceInfo" version="2.0.2" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.PushNotification" version="1.1.7" targetFramework="xamarinios10" developmentDependency="true" />
   <package id="Xam.Plugins.Settings" version="2.1.0" targetFramework="xamarinios10" />
+  <package id="Xamarin.Facebook" version="4.4.0.2" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.1.0.6529" targetFramework="xamarinios10" />
-  <package id="Xamarin-MVVM" version="1.0.3" targetFramework="xamarinios10" />
 </packages>
