--- a/ALFC connect PCL/ALFCConnect.csproj
+++ b/ALFC connect PCL/ALFCConnect.csproj
@@ -6,8 +6,8 @@
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{9A1ED959-56BE-48DB-BD07-545B00242318}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>ALFCConnect</RootNamespace>
-    <AssemblyName>ALFCConnect</AssemblyName>
+    <RootNamespace>ALFCconnect</RootNamespace>
+    <AssemblyName>ALFCconnect</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
     <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
