--- a/ALFC connect PCL/packages.config
+++ b/ALFC connect PCL/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AWSSDK.CognitoIdentity" version="3.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="AWSSDK.Core" version="3.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="AWSSDK.S3" version="3.3.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="AWSSDK.SecurityToken" version="3.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="AWSSDK.SimpleNotificationService" version="3.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="AWSSDK.SQS" version="3.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="HtmlAgilityPack-PCL" version="1.4.6" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
@@ -7,12 +13,15 @@
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
-  <package id="Plugin.Share" version="4.0.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="PCLCrypto" version="2.0.147" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="PCLStorage" version="1.0.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Plugin.Share" version="4.0.3" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Splat" version="1.6.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Validation" version="2.3.7" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="portable45-net45+win8+wp8+wpa81" />
-  <package id="Xam.Plugin.PushNotification" version="1.2.2" targetFramework="portable45-net45+win8+wp8+wpa81" developmentDependency="true" />
-  <package id="Xam.Plugins.Settings" version="2.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xam.Plugin.PushNotification" version="1.2.4" targetFramework="portable45-net45+win8+wp8+wpa81" developmentDependency="true" />
+  <package id="Xam.Plugins.Settings" version="2.5.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.1.114" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
