--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,17 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AWSSDK.CognitoIdentity" version="3.3.0" targetFramework="xamarinios10" />
+  <package id="AWSSDK.Core" version="3.3.0" targetFramework="xamarinios10" />
+  <package id="AWSSDK.SecurityToken" version="3.3.0" targetFramework="xamarinios10" />
+  <package id="AWSSDK.SimpleNotificationService" version="3.3.0" targetFramework="xamarinios10" />
+  <package id="AWSSDK.SQS" version="3.3.0" targetFramework="xamarinios10" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="xamarinios10" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="xamarinios10" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="xamarinios10" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="xamarinios10" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="xamarinios10" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
-  <package id="Plugin.Share" version="4.0.2" targetFramework="xamarinios10" />
+  <package id="Plugin.Share" version="4.0.3" targetFramework="xamarinios10" />
   <package id="Splat" version="1.6.2" targetFramework="xamarinios10" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="xamarinios10" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="xamarinios10" />
+  <package id="System.Collections" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Collections.NonGeneric" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.Console" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Tools" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.IO.FileSystem" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.Linq" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Http" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.Reflection.TypeExtensions" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.Csp" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Threading" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Threading.Thread" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="System.Xml.XDocument" version="4.0.11" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="xamarinios10" />
-  <package id="Xam.Plugin.PushNotification" version="1.2.2" targetFramework="xamarinios10" developmentDependency="true" />
-  <package id="Xam.Plugins.Settings" version="2.1.0" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.PushNotification" version="1.2.4" targetFramework="xamarinios10" developmentDependency="true" />
+  <package id="Xam.Plugins.Settings" version="2.5.1.0" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.1.114" targetFramework="xamarinios10" />
 </packages>
